# feed-to-succeed

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: cdc_dag.py  census_dag.py  dbt_int_dag.py  dbt_marts_dag.py  dbt_stg_dag.py  nces_dag.py  usda_dag.py
ingestion/: cdc.py  census.py  nces.py  usda.py
nutrition_pipeline/: dbt_project.yml
nutrition_pipeline/models/marts/: mart_nutrition_vs_academics.sql  mart_nutrition_vs_health.sql  mart_state_nutrition_overview.sql  mart_tennessee_spotlight.sql  schema.yml
nutrition_pipeline/models/staging/: schema.yml  sources.yml  stg_cdc_data.sql  stg_census_acs.sql  stg_nces_math.sql  stg_nces_reading.sql  stg_nslp_participation.sql  stg_sbp.sql
nutrition_pipeline/seeds/: state_crosswalk.csv
